--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 
-	<script src="./Components/App.js"></script>
+	<script src="./Components/index.js"></script>
 </body>
 
 </html>
