--- a/src/indexDev.html
+++ b/src/indexDev.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>Innruptive</title>
+		<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+		<link rel="manifest" href="img/site.webmanifest">
+		<link rel="stylesheet" href="./scss/style.scss" />
+	</head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Innruptive</title>
-	<link rel="icon" href="./img/favicon.ico" type="image/x-icon" />
-	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
-	<link rel="stylesheet" href="https://img.en25.com/Web/VodafoneGroupPLC/{b5a6d2bd-f292-417f-959c-3d9833bda9fc}_vodafone_fonts.css">
-	<link rel="stylesheet" href="./scss/style.scss">
-
-</head>
-
-<body>
-	<div id="root">
-		<div className="loader">
-			<div className="spinner">
-				<div className="cube1"></div>
-				<div className="cube2"></div>
+	<body>
+		<div id="root">
+			<div className="loader">
+				<div className="spinner">
+					<div className="cube1"></div>
+					<div className="cube2"></div>
+				</div>
 			</div>
 		</div>
-	</div>
 
-	<script src="./Components/index.js"></script>
-</body>
-
+		<script src="./index.js"></script>
+	</body>
 </html>
