V 1.0.0. - first version vent live

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,25 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<meta name="description" content="Personal site, blog of Balint Apro, front-end developer from Budapest.">
 		<meta name="keywords" content="Balint, Apro, blog, front-end, developer, disruptive innovation">
+		<meta name="google-site-verification" content="1jKDBR2uncshP1akbWIj8bPqkkQZEzMvRjKxr6xJ8_A" />
 		<title>Innruptive</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://innruptive.com" />
+		<meta property="og:title" content="Innruptive" />
+		<meta property="og:description" content="Front-end solutions made with care and speed. Portfolio and blog of Balint Apro, front-end developer from Budapest." />
+		<meta property="og:image" content="https://innruptive.com/api/storage/uploads/2020/08/30/5f4bd27e69feeinnruptive.png" />
+
+		<meta property="twitter:card" content="https://innruptive.com/api/storage/uploads/2020/08/30/5f4bd27e69feeinnruptive.png" />
+		<meta property="twitter:url" content="https://innruptive.com" />
+		<meta property="twitter:title" content="Innruptive" />
+		<meta property="twitter:description" content="Front-end solutions made with care and speed. Portfolio and blog of Balint Apro, front-end developer from Budapest." />
+		<meta property="twitter:image" content="https://innruptive.com/api/storage/uploads/2020/08/30/5f4bd27e69feeinnruptive.png" />
+		
 		<link rel="manifest" href="img/site.webmanifest">
 		<link rel="stylesheet" href="./scss/style.scss" />
 	</head>
